- added build in the docs folder
	- fixed resposiveness
	- added dialogues component
	- stable state acquired for the webpage

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://rohitanand11.github.io/avengers_corousal/",
   "name": "avengers_corousal",
   "version": "0.1.0",
   "private": true,
