updated the build for the app

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://rohitanand11.github.io/avengers_corousal/",
-  "name": "avengers_corousal",
+  "homepage": "https://rohitanand11.github.io/avengers/",
+  "name": "avengers",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
